--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.11.0",
+    "mongoose": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -45,7 +46,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.11.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "swagger-ui-express": "^4.6.2",
